<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="clickHandler"
            type="com.letsclimbthis.esigtesttask.ui.certificates.AdapterCertificateList.CertificatesItemViewHolder" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:visibility="visible"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_certificate_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="@dimen/spacing_xxlarge"
            android:onClick="@{clickHandler::onClick}"
            >

            <TextView
                android:id="@+id/tv_certificate_serial_label"
                android:tag="@string/tv_chosen_key_container_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/certificate_serial"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_900"
                app:layout_constraintBottom_toTopOf="@+id/tv_certificate_serial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.20999998"
                app:layout_constraintVertical_chainStyle="packed"
                />

            <TextView
                android:id="@+id/tv_certificate_serial"
                android:tag="@string/tv_chosen_key_container_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/grey_40"
                app:layout_constraintBottom_toTopOf="@+id/tv_certificate_issuer_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_certificate_serial_label"
                app:layout_constraintVertical_bias="0.20999998"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="50BA4886C4DDCCCD507D0782CC00ECAD"
                />

            <TextView
                android:id="@+id/tv_certificate_issuer_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_xmedium"
                android:gravity="center"
                android:text="@string/certificate_issuer"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_900"
                app:layout_constraintBottom_toTopOf="@+id/tv_certificate_issuer_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_certificate_serial"
                app:layout_constraintTop_toBottomOf="@+id/tv_certificate_serial" />

            <TextView
                android:id="@+id/tv_certificate_issuer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/grey_40"
                app:layout_constraintBottom_toTopOf="@+id/tv_certificate_expiration_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_certificate_serial"
                app:layout_constraintTop_toBottomOf="@+id/tv_certificate_issuer_name_label"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/tv_certificate_expiration_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_xmedium"
                android:gravity="center"
                android:text="@string/expiry_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_900"
                app:layout_constraintBottom_toTopOf="@+id/tv_certificate_expiration_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_certificate_serial"
                app:layout_constraintTop_toBottomOf="@+id/tv_certificate_issuer_name" />

            <TextView
                android:id="@+id/tv_certificate_expiration_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/grey_40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_certificate_serial"
                app:layout_constraintTop_toBottomOf="@+id/tv_certificate_expiration_date_label"
                tools:text="01/01/2023" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>